fix(layout): re-set padding on small screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,9 +28,3 @@ a:hover {
   color: #8d2f00;
 }
 
-@media (max-width: 768px) {
-  .container {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
